# HawkMessanger

./: .gitignore  .gitmodules  Doxyfile  README.md
Projects/: CMakeLists.txt  MakeComments.sh  abstractdatastorage.cpp  abstractdatastorage.h  how-to-use-pvs-studio-free
Projects/config/: InitCompiller.cmake  InitGlobalDefines.cmake  InitProjectPaths.cmake  InitUtils.cmake  VersionMaker.cmake
Projects/config/Finders/: FindQT.cmake
Projects/config/IncTemplates/: TemplateVersion.cpp  TemplateVersion.h
Projects/libraries/: CMakeLists.txt
Projects/libraries/HawkCommon/: CMakeLists.txt
Projects/libraries/HawkCommon/src/: HawkCommon.h  account.cpp  account.h  contactlist.cpp  contactlist.h  defines.h  errorcode.cpp  errorcode.h  filesystem.h  group.cpp  group.h  groupinfo.cpp  groupinfo.h  grouplist.cpp  grouplist.h  groupmessage.cpp  groupmessage.h  notcopyable.h  systemerrorex.cpp  systemerrorex.h  threadwaitcontrol.cpp  threadwaitcontrol.h  user.cpp  user.h  userinfo.cpp  userinfo.h  userlist.cpp  userlist.h
Projects/libraries/HawkCommon/tests/: CMakeLists.txt
Projects/libraries/HawkCommon/tests/ContactList/: main.cpp
Projects/libraries/HawkCommon/tests/Group/: main.cpp
Projects/libraries/HawkCommon/tests/GroupInfo/: main.cpp
Projects/libraries/HawkCommon/tests/GroupList/: main.cpp
Projects/libraries/HawkCommon/tests/GroupMessage/: main.cpp
Projects/libraries/HawkCommon/tests/TestsCommon/: HawkCommonTestUtils.hpp
Projects/libraries/HawkCommon/tests/User/: main.cpp
Projects/libraries/HawkCommon/tests/UserInfo/: main.cpp
Projects/libraries/HawkCommon/tests/UserList/: main.cpp
Projects/libraries/HawkCommon/tests/error_code/: main.cpp
Projects/libraries/HawkErrors/: CMakeLists.txt
Projects/libraries/HawkErrors/src/: HawkErrors.h  categoryconst.h  datastorageerrorcategory.cpp  datastorageerrorcategory.h  errorcode.cpp  errorcode.h  neterrorcategory.cpp  neterrorcategory.h  systemerrorex.cpp  systemerrorex.h
Projects/libraries/HawkErrors/tests/: CMakeLists.txt
Projects/libraries/HawkErrors/tests/DataStorageError/: main.cpp
Projects/libraries/HawkErrors/tests/SystemErrorEx/: main.cpp
Projects/libraries/HawkErrors/tests/error_code/: main.cpp
Projects/libraries/HawkLog/: CMakeLists.txt
Projects/libraries/HawkLog/src/: HawkLog.h  customstreams.cpp  customstreams.h  eventsystem.cpp  eventsystem.h  logmessage.cpp  logmessage.h  logsystem.cpp  logsystem.h
Projects/libraries/HawkLog/tests/: CMakeLists.txt
Projects/libraries/HawkLog/tests/CatchSegfoult/: main.cpp
Projects/libraries/HawkNet/: CMakeLists.txt
Projects/libraries/HawkNet/src/: HawkNet.h  nettypes.h  netutils.cpp  netutils.h
Projects/libraries/HawkNet/src/Abstract/: abstractconnection.cpp  abstractconnection.h  abstractserver.cpp  abstractserver.h
Projects/libraries/HawkNet/src/Async/: abstractasyncconnection.cpp  abstractasyncserver.cpp  abstractasyncserver.h
Projects/libraries/HawkNet/src/Interface/: connection.cpp  connection.h  server.cpp  server.h
Projects/libraries/HawkNet/tests/: CMakeLists.txt
Projects/libraries/HawkNet/tests/NetUtils/: main.cpp
Projects/libraries/HawkNet/tests/QtSimpleNet/: main.cpp
Projects/libraries/HawkNet/tests/QtSslNet/: LinuxCreateCertificate.sh  WindowsCreateCertificate.bat  main.cpp
Projects/libraries/HawkNet/tests/TestsCommon/: HawkNetTest.hpp
Projects/libraries/HawkServerCore/: CMakeLists.txt
Projects/libraries/HawkServerCore/HawkServerCore/: HawkServerCore.pro  hawkservercore_global.h  hmservercore.cpp  hmservercore.h
Projects/libraries/HawkServerCore/src/: HawkServerCore.h  abstractdatastoragefunctional.cpp  abstractdatastoragefunctional.h  builder.cpp  builder.h  cached.cpp  cached.h  cacheddatastorage.cpp  cacheddatastorage.h  datastorage.cpp  datastorage.h  datastorageerrorcategory.cpp  datastorageerrorcategory.h  datastorageerrors.h  hmservercore.cpp  hmservercore.h  jsondatastorage.cpp  jsondatastorage.h  jsondatastorageconst.h  jsondatastoragevalidator.cpp  jsondatastoragevalidator.h  servercore.cpp  servercore.h
Projects/libraries/HawkServerCore/src/builders/: accountbuilder.cpp  accountbuilder.h
Projects/libraries/HawkServerCore/src/datastorage/: DataStorage.h  datastorageerrorcategory.cpp  datastorageerrorcategory.h
Projects/libraries/HawkServerCore/tests/: CMakeLists.txt
Projects/libraries/HawkServerCore/tests/Builder/: main.cpp
Projects/libraries/HawkServerCore/tests/CachedDataStorage/: main.cpp
Projects/libraries/HawkServerCore/tests/CachedMemoryDataStorage/: main.cpp
Projects/libraries/HawkServerCore/tests/CombinedDataStorage/: main.cpp
Projects/libraries/HawkServerCore/tests/JsonDataStorage/: main.cpp
Projects/libraries/HawkServerCore/tests/TestsCommon/: HawkServerCoreCachedDataStorageTest.hpp  HawkServerCoreHardDataStorageTest.hpp
Projects/modules/: CMakeLists.txt
Projects/modules/HawkConsolServer/: CMakeLists.txt
Projects/modules/HawkConsolServer/HawkConsolServer/: CMakeLists.txt
Projects/modules/HawkConsolServer/src/: main.cpp
Projects/modules/Prototypes/: CMakeLists.txt  ProtoConfig.cmake
Projects/modules/Prototypes/MessageClient/: CMakeLists.txt
Projects/modules/Prototypes/MessageClient/MessageClient_QtSimple/: CMakeLists.txt
Projects/modules/Prototypes/MessageClient/MessageClient_QtSsl/: CMakeLists.txt
Projects/modules/Prototypes/MessageClient/src/: main.cpp  prototypeclient.cpp  prototypeclient.h  qinteractive.cpp  qinteractive.h  qtclientthread.cpp  qtclientthread.h
Projects/modules/Prototypes/MessageClientUI/: CMakeLists.txt
Projects/modules/Prototypes/MessageClientUI/MessageClientUI_QtSimple/: CMakeLists.txt
Projects/modules/Prototypes/MessageClientUI/MessageClientUI_QtSsl/: CMakeLists.txt
Projects/modules/Prototypes/MessageClientUI/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  prototypeclient.cpp  prototypeclient.h
Projects/modules/Prototypes/MessageServer/: CMakeLists.txt
Projects/modules/Prototypes/MessageServer/MessageServer_QtSimple/: CMakeLists.txt
Projects/modules/Prototypes/MessageServer/MessageServer_QtSsl/: CMakeLists.txt
(+2642 files in other folders)
