cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)

#====================================================================
# Инициализируем проект
#====================================================================
set(HM_VERSION 0.0.1.5)
project(HawkMessanger VERSION ${HM_VERSION} LANGUAGES CXX)  # Инициализируем проект

#====================================================================
# Задаём опции проекта
#====================================================================
option(BUILD_HAWK_TESTS                 "Собрать тесты модулей системы?"                    ON  )
option(BUILD_HAWK_PROTOTYPES            "Собрать модули-прототипы?"                         ON  )
option(USE_PVS_STUDIO_STATIC_ANALYSIS   "Использовать статический анализатор PVS-STUDIO?"   OFF )

#====================================================================
# Задаём глобальные параметры корневого файла проекта
#====================================================================
set(PROJECT_ROOT_PATH       ${CMAKE_CURRENT_SOURCE_DIR})    # Указываем путь к корневой папке проекта
set(CONFIG_PATH             ${PROJECT_ROOT_PATH}/config)    # Указываем путь к файлам конфигураций
set(LIB_TYPE                SHARED)                         # Задаём тип собираемых библиотек (SHARED\STATIC)

#====================================================================
# Подключаем дополнительные модули инициализации проекта
#====================================================================
include(${CONFIG_PATH}/InitGlobalDefines.cmake)             # Инициализируем глобальные значения
include(${CONFIG_PATH}/InitCompiller.cmake)                 # Инициализируем параметры компилятора
include(${CONFIG_PATH}/InitProjectPaths.cmake)              # Инициализируем пути проекта
include(${CONFIG_PATH}/Finders/FindQT.cmake)                # Подключаем Qt

#====================================================================
# Секция активируемых настройками опций
#====================================================================
if (BUILD_HAWK_TESTS)
    enable_testing()                                        # Включаем поддержку тестов
endif(BUILD_HAWK_TESTS)
#====================================================================
if (USE_PVS_STUDIO_STATIC_ANALYSIS)
#    set(EXCLUDE_PATH /opt/hisi-linux/x86-arm/aarch64-himix100-linux) # Игнорируем подключения компилятора при анализе
    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)                   # Разрешить генерацию JSON содержащий точные вызовы компилятора для всех единиц перевода проекта в машиночитаемой форме
    include(${CONFIG_PATH}/PVS-Studio.cmake)                # Подключаем PVS_Studio
endif(USE_PVS_STUDIO_STATIC_ANALYSIS)

#====================================================================
# Начинаем сборку проекта
#====================================================================
add_subdirectory(3rdParty)                                  # Собираем сторонние зависимости
add_subdirectory(libraries)                                 # Собираем библиотеки
add_subdirectory(modules)                                   # Собираем модули
#====================================================================
