cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)

project(Modules)

#====================================================================
add_subdirectory(HawkConsolServer) # Собираем сервер
#add_subdirectory(HawkConsolClient) # Собираем клиент
#====================================================================
