cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)

project(MessageClient)

#====================================================================
add_subdirectory(MessageClient_QtSimple) # 
add_subdirectory(MessageClient_QtSsl) # 
#====================================================================
